// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SuperVideo deleted or expired file 1`] = `[]`;

exports[`SuperVideo embed only 1`] = `
[
  {
    "format": "hls",
    "label": "SuperVideo",
    "meta": {
      "countryCodes": [],
      "height": 1080,
    },
    "sourceId": "supervideo_",
    "ttl": 10800000,
    "url": "https://hfs308.serversicuro.cc/hls/,dnzpe7rf5xg4a3gyva3h5orlyw23xosfzwunl5xbmjpz2lwk3cmu5azdcnsq,.urlset/master.m3u8",
  },
]
`;

exports[`SuperVideo processing video 1`] = `[]`;

exports[`SuperVideo supervideo.cc /e/ 1`] = `
[
  {
    "format": "hls",
    "label": "SuperVideo",
    "meta": {
      "countryCodes": [],
      "height": 720,
    },
    "sourceId": "supervideo_",
    "ttl": 10800000,
    "url": "https://hfs309.serversicuro.cc/hls/,dnzpfi3d27g4a3gyvbmh5klwtl65qh654hyjtgupd6p57tdcfdq45p6s4zxa,.urlset/master.m3u8",
  },
]
`;

exports[`SuperVideo supervideo.tv /embed-/ 1`] = `
[
  {
    "format": "hls",
    "label": "SuperVideo",
    "meta": {
      "countryCodes": [],
      "height": 344,
    },
    "sourceId": "supervideo_",
    "ttl": 10800000,
    "url": "https://hfs307.serversicuro.cc/hls/,dnzpaalv5xg4a3gyvavh52jryoft7o5cd5nm7cwtnu74kaehp2e7ro7gd4pq,.urlset/master.m3u8",
  },
]
`;
